# NotebookLM2PPT

./: .gitignore  LICENSE  README.md  build.cmd  compile.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.vitepress/: config.mts
docs/: changelog.md  index.md  mineru.md
notebooklm2ppt/: __init__.py  cli.py  gui.py  ppt_combiner.py
notebooklm2ppt/i18n/: en.py  zh_cn.py
notebooklm2ppt/utils/: edge_diversity.py  image_inpainter.py  image_viewer.py  ppt_refiner.py  screenshot_automation.py
src/: __init__.py  pdf2png.py
src/utils/: __init__.py
tests/: test_image_view.py
